add styles and three sections

--- a/index.html
+++ b/index.html
@@ -14,24 +14,26 @@
         <a href="#" class="logo">
             <img src="images/logo.svg" alt="logo">
         </a>
+        <div class="d_flex">
         <p>
-            Разрабатываем фирменные стили с 2009 года
+            Разрабатываем фирменные<br> стили с 2009 года
         </p>
         <ul>
             <li>
-                8 (495) 156-39-11
+                <span>8 (495) 156-39-11</span>
             </li>
             <li>
-                <a href="#" class="facebook" title="facebook" target="_blank">
+                <a href="#" class="soc" title="facebook" target="_blank">
                     <img src="images/Vector1.svg" alt="facebook">
                 </a>
             </li>
             <li>
-                <a href="#" class="instagram" title="instagram" target="_blank">
-                    <img src="images/Vector2.svg" alt="instagram">
+                <a href="#" class="soc" title="instagram" target="_blank">
+                    <img src="images/Group%208.svg" alt="instagram">
                 </a>
             </li>
         </ul>
+        </div>
     </div>
 </header>
 <section class="main_banner">
@@ -40,6 +42,41 @@
         <p>Разработаем в срок от 10-ти дней</p>
         <a href="#" class="btn">Портфолио</a>
         <a href="#" class="btn">Оставить заявку</a>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <h3>Что такое фирменный стиль</h3>
+        <div>
+            <img src="images/Rectangle%207.jpg" alt="brand_identity">
+        </div>
+        <p>Это набор тех уникальных «признаков», по которым клиент отличит вас от других компаний. Фирменный стиль отражает миссию бренда, ценности, является способом его идентификации, формирует определённое восприятие в коммуникации с потребителями.</p>
+        <p>В идеале разработка корпоративного стиля должна происходить одновременно с созданием бизнеса и формированием его фундаментальных идей. Есть и второй вариант: бизнес существует определенное время и ему нужен перезапуск - это называется редизайн или ребрендинг: в мире жёсткой конкуренции важно быть «в тренде», успевать за изменениями в поведениях покупателя и “говорить” с ним на одном языке.</p>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <h2>Название и логотип – важные составляющие фирменного стиля, но на этом всё только начинается. Ниже основные элементы:</h2>
+        <ol>
+            <li>Название компании</li>
+            <li>Логотип – основной графический символ</li>
+            <li>Фирменные цвета всей коммуникации (онлайн и оффлайн)</li>
+            <li>Шрифт</li>
+            <li>Носители фирменного стиля</li>
+        </ol>
+        <p>Этот набор варьируется в зависимости от нужд и потребностей компании: визитные карточки, фирменные бланки и прочая деловая документация, упаковка, сувенирная продукция, брендинг автотранспорта.</p>
+    </div>
+</section>
+
+<section>
+    <div class="container">
+        <h3>Сколько стоит фирменный стиль?</h3>
+        <p>Каждая задача по разработке фирменного стиля уникальна для нас — это новый вызов и новые эмоции. Мы принципиально не предлагаем вам стандартизированные пакеты “эконом”, “стандрат”, или “премиум”, мы не штампуем, мы - создаем.</p>
+        <p>Стоимость разработки фирменного стиля в нашем агентстве начинается от 120 000 руб., финальную планку без брифинга определить невозможно - давайте созвонимся и обсудим ваш проект!</p>
+        <p>Каждый клиент нашего агентства получает приятный бонус на финише проекта, о котором мы расскажем ниже ▼</p>
+        <div>
+            <img src="images/Rectangle%2020.jpg" alt="price">
+        </div>
     </div>
 </section>
 </body>
