--- a/index.html
+++ b/index.html
@@ -44,27 +44,48 @@
         <a href="#" class="btn">Оставить заявку</a>
     </div>
 </section>
+
 <section>
     <div class="container">
-        <h3>Что такое фирменный стиль</h3>
+        <h3 class="title">Что такое фирменный стиль</h3>
+        <div class="d_flex">
         <div>
             <img src="images/Rectangle%207.jpg" alt="brand_identity">
         </div>
-        <p>Это набор тех уникальных «признаков», по которым клиент отличит вас от других компаний. Фирменный стиль отражает миссию бренда, ценности, является способом его идентификации, формирует определённое восприятие в коммуникации с потребителями.</p>
-        <p>В идеале разработка корпоративного стиля должна происходить одновременно с созданием бизнеса и формированием его фундаментальных идей. Есть и второй вариант: бизнес существует определенное время и ему нужен перезапуск - это называется редизайн или ребрендинг: в мире жёсткой конкуренции важно быть «в тренде», успевать за изменениями в поведениях покупателя и “говорить” с ним на одном языке.</p>
+        <p class="description">Это набор тех уникальных «признаков», по которым клиент отличит вас от других компаний. Фирменный стиль отражает миссию бренда, ценности, является способом его идентификации, формирует определённое восприятие в коммуникации с потребителями.
+            <br>
+            <br>
+            В идеале разработка корпоративного стиля должна происходить одновременно с созданием бизнеса и формированием его фундаментальных идей. Есть и второй вариант: бизнес существует определенное время и ему нужен перезапуск - это называется редизайн или ребрендинг: в мире жёсткой конкуренции важно быть «в тренде», успевать за изменениями в поведениях покупателя и “говорить” с ним на одном языке.</p>
+        </div>
     </div>
 </section>
+
 <section>
     <div class="container">
-        <h2>Название и логотип – важные составляющие фирменного стиля, но на этом всё только начинается. Ниже основные элементы:</h2>
-        <ol>
-            <li>Название компании</li>
-            <li>Логотип – основной графический символ</li>
-            <li>Фирменные цвета всей коммуникации (онлайн и оффлайн)</li>
-            <li>Шрифт</li>
-            <li>Носители фирменного стиля</li>
-        </ol>
-        <p>Этот набор варьируется в зависимости от нужд и потребностей компании: визитные карточки, фирменные бланки и прочая деловая документация, упаковка, сувенирная продукция, брендинг автотранспорта.</p>
+        <h2 class="subtitle">Название и логотип – важные составляющие фирменного стиля, но на этом всё только начинается. Ниже основные элементы:</h2>
+        <ul class="d_flex list">
+            <li>
+                <span>1</span>
+                <p>Название компании</p>
+            </li>
+            <li>
+                <span>2</span>
+                <p>Логотип – основной графический символ</p>
+            </li>
+            <li>
+                <span>3</span>
+                <p>Фирменные цвета всей коммуникации (онлайн и оффлайн)</p>
+            </li>
+            <li>
+                <span>4</span>
+                <p>Шрифт</p>
+            </li>
+            <li>
+                <span>5</span>
+                <p>Носители фирменного стиля</p>
+            </li>
+        </ul>
+        <p class="set">Этот набор варьируется в зависимости от нужд и потребностей компании: визитные карточки, фирменные бланки и прочая деловая документация, упаковка, сувенирная продукция, брендинг автотранспорта.</p>
     </div>
 </section>
 
