--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="#" class="btn">Оставить заявку</a>
     </div>
 </section>
-
+<!-- -->
 <section>
     <div class="container">
         <h3 class="title">Что такое фирменный стиль</h3>
@@ -59,44 +59,52 @@
         </div>
     </div>
 </section>
-
+<!-- -->
 <section>
-    <div class="container">
+    <div class="container_2">
         <h2 class="subtitle">Название и логотип – важные составляющие фирменного стиля, но на этом всё только начинается. Ниже основные элементы:</h2>
-        <ul class="d_flex list">
-            <li>
-                <span>1</span>
-                <p>Название компании</p>
-            </li>
-            <li>
-                <span>2</span>
-                <p>Логотип – основной графический символ</p>
-            </li>
-            <li>
-                <span>3</span>
-                <p>Фирменные цвета всей коммуникации (онлайн и оффлайн)</p>
-            </li>
-            <li>
-                <span>4</span>
-                <p>Шрифт</p>
-            </li>
-            <li>
-                <span>5</span>
-                <p>Носители фирменного стиля</p>
-            </li>
-        </ul>
-        <p class="set">Этот набор варьируется в зависимости от нужд и потребностей компании: визитные карточки, фирменные бланки и прочая деловая документация, упаковка, сувенирная продукция, брендинг автотранспорта.</p>
+        <div class="relative">
+            <ul class="d_flex list">
+               <li>
+                   <span>1</span>
+                   <p>Название компании</p>
+               </li>
+               <li>
+                   <span>2</span>
+                   <p>Логотип – основной графический символ</p>
+               </li>
+               <li>
+                   <span>3</span>
+                   <p>Фирменные цвета всей коммуникации (онлайн и оффлайн)</p>
+               </li>
+                <li>
+                    <span>4</span>
+                    <p>Шрифт</p>
+                </li>
+                <li>
+                    <span>5</span>
+                    <p>Носители фирменного стиля</p>
+                </li>
+            </ul>
+            <p class="set">Этот набор варьируется в зависимости от нужд и потребностей компании: визитные карточки, фирменные бланки и прочая деловая документация, упаковка, сувенирная продукция, брендинг автотранспорта.</p>
+        </div>
     </div>
 </section>
-
+<!-- -->
 <section>
-    <div class="container">
-        <h3>Сколько стоит фирменный стиль?</h3>
-        <p>Каждая задача по разработке фирменного стиля уникальна для нас — это новый вызов и новые эмоции. Мы принципиально не предлагаем вам стандартизированные пакеты “эконом”, “стандрат”, или “премиум”, мы не штампуем, мы - создаем.</p>
-        <p>Стоимость разработки фирменного стиля в нашем агентстве начинается от 120 000 руб., финальную планку без брифинга определить невозможно - давайте созвонимся и обсудим ваш проект!</p>
-        <p>Каждый клиент нашего агентства получает приятный бонус на финише проекта, о котором мы расскажем ниже ▼</p>
-        <div>
-            <img src="images/Rectangle%2020.jpg" alt="price">
+    <div class="container_3">
+        <div class="d_flex">
+            <div class="description_2">
+                <p>Каждая задача по разработке фирменного стиля уникальна для нас — это новый вызов и новые эмоции. Мы принципиально не предлагаем вам стандартизированные пакеты “эконом”, “стандрат”, или “премиум”, мы не штампуем, мы - создаем.<br><br>Стоимость разработки фирменного стиля в нашем агентстве начинается от 120 000 руб., финальную планку без брифинга определить невозможно - давайте созвонимся и обсудим ваш проект!</p>
+                <br>
+                <p class="note">Каждый клиент нашего агентства получает приятный бонус на финише проекта, о котором мы расскажем ниже ▼</p>
+            </div>
+            <div>
+                <h3 class="title_2">Сколько стоит фирменный стиль?</h3>
+                <div>
+                    <img src="images/Rectangle%2020.jpg" alt="price">
+                </div>
+            </div>
         </div>
     </div>
 </section>
