--- a/index.html
+++ b/index.html
@@ -63,19 +63,18 @@
 <section>
     <div class="container_2">
         <h2 class="subtitle">Название и логотип – важные составляющие фирменного стиля, но на этом всё только начинается. Ниже основные элементы:</h2>
-        <div class="relative">
             <ul class="d_flex list">
                <li>
                    <span>1</span>
-                   <p>Название компании</p>
+                   <p>Название<br> компании</p>
                </li>
                <li>
                    <span>2</span>
-                   <p>Логотип – основной графический символ</p>
+                   <p>Логотип –<br> основной<br> графический<br> символ</p>
                </li>
                <li>
                    <span>3</span>
-                   <p>Фирменные цвета всей коммуникации (онлайн и оффлайн)</p>
+                   <p>Фирменные<br> цвета всей <br>коммуникации <br>(онлайн и оффлайн)</p>
                </li>
                 <li>
                     <span>4</span>
@@ -83,11 +82,12 @@
                 </li>
                 <li>
                     <span>5</span>
-                    <p>Носители фирменного стиля</p>
+                    <div>
+                        <p>Носители<br> фирменного<br> стиля</p>
+                        <p class="set">Этот набор варьируется в зависимости от нужд и потребностей компании: визитные карточки, фирменные бланки и прочая деловая документация, упаковка, сувенирная продукция, брендинг автотранспорта.</p>
+                    </div>
                 </li>
             </ul>
-            <p class="set">Этот набор варьируется в зависимости от нужд и потребностей компании: визитные карточки, фирменные бланки и прочая деловая документация, упаковка, сувенирная продукция, брендинг автотранспорта.</p>
-        </div>
     </div>
 </section>
 <!-- -->
@@ -102,7 +102,7 @@
             <div>
                 <h3 class="title_2">Сколько стоит фирменный стиль?</h3>
                 <div>
-                    <img src="images/Rectangle%2020.jpg" alt="price">
+                    <img class="price" src="images/Rectangle%2020.jpg" alt="price">
                 </div>
             </div>
         </div>
