--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     <div class="container">
         <h3 class="title">Что такое фирменный стиль</h3>
         <div class="d_flex">
-        <div>
+            <div>
             <img src="images/Rectangle%207.jpg" alt="brand_identity">
-        </div>
-        <p class="description">Это набор тех уникальных «признаков», по которым клиент отличит вас от других компаний. Фирменный стиль отражает миссию бренда, ценности, является способом его идентификации, формирует определённое восприятие в коммуникации с потребителями.
-            <br>
-            <br>
-            В идеале разработка корпоративного стиля должна происходить одновременно с созданием бизнеса и формированием его фундаментальных идей. Есть и второй вариант: бизнес существует определенное время и ему нужен перезапуск - это называется редизайн или ребрендинг: в мире жёсткой конкуренции важно быть «в тренде», успевать за изменениями в поведениях покупателя и “говорить” с ним на одном языке.</p>
+            </div>
+            <div class="description">
+                <p >Это набор тех уникальных «признаков», по которым клиент отличит вас от других компаний. Фирменный стиль отражает миссию бренда, ценности, является способом его идентификации, формирует определённое восприятие в коммуникации с потребителями.</p>
+                <p>В идеале разработка корпоративного стиля должна происходить одновременно с созданием бизнеса и формированием его фундаментальных идей. Есть и второй вариант: бизнес существует определенное время и ему нужен перезапуск - это называется редизайн или ребрендинг: в мире жёсткой конкуренции важно быть «в тренде», успевать за изменениями в поведениях покупателя и “говорить” с ним на одном языке.</p>
+            </div>
         </div>
     </div>
 </section>
@@ -95,9 +95,9 @@
     <div class="container_3">
         <div class="d_flex">
             <div class="description_2">
-                <p>Каждая задача по разработке фирменного стиля уникальна для нас — это новый вызов и новые эмоции. Мы принципиально не предлагаем вам стандартизированные пакеты “эконом”, “стандрат”, или “премиум”, мы не штампуем, мы - создаем.<br><br>Стоимость разработки фирменного стиля в нашем агентстве начинается от 120 000 руб., финальную планку без брифинга определить невозможно - давайте созвонимся и обсудим ваш проект!</p>
-                <br>
-                <p class="note">Каждый клиент нашего агентства получает приятный бонус на финише проекта, о котором мы расскажем ниже ▼</p>
+                <p>Каждая задача по разработке фирменного стиля уникальна для нас — это новый вызов и новые эмоции. Мы принципиально не предлагаем вам стандартизированные пакеты “эконом”, “стандрат”, или “премиум”, мы не штампуем, мы - создаем.</p>
+                <p>Стоимость разработки фирменного стиля в нашем агентстве начинается от 120 000 руб., финальную планку без брифинга определить невозможно - давайте созвонимся и обсудим ваш проект!</p>
+                <p>Каждый клиент нашего агентства получает приятный бонус на финише проекта, о котором мы расскажем ниже ▼</p>
             </div>
             <div>
                 <h3 class="title_2">Сколько стоит фирменный стиль?</h3>
