add two sections and fonts

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <section>
     <div class="container">
         <h3 class="title">Что такое фирменный стиль</h3>
-        <div class="d_flex">
+        <div class="d_flex_1">
             <div>
             <img src="images/Rectangle%207.jpg" alt="brand_identity">
             </div>
@@ -93,7 +93,7 @@
 <!-- -->
 <section>
     <div class="container_3">
-        <div class="d_flex">
+        <div class="d_flex_1">
             <div class="description_2">
                 <p>Каждая задача по разработке фирменного стиля уникальна для нас — это новый вызов и новые эмоции. Мы принципиально не предлагаем вам стандартизированные пакеты “эконом”, “стандрат”, или “премиум”, мы не штампуем, мы - создаем.</p>
                 <p>Стоимость разработки фирменного стиля в нашем агентстве начинается от 120 000 руб., финальную планку без брифинга определить невозможно - давайте созвонимся и обсудим ваш проект!</p>
@@ -102,9 +102,64 @@
             <div>
                 <h3 class="title_2">Сколько стоит фирменный стиль?</h3>
                 <div>
-                    <img class="price" src="images/Rectangle%2020.jpg" alt="price">
+                    <img class="img" src="images/Rectangle%2020.jpg" alt="price">
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+<!-- -->
+<section>
+    <div class="container project_1">
+        <div>
+            <img class="img" src="images/project_1.jpg" alt="project_amperia">
+        </div>
+        <div class="d_flex_1">
+            <h3>Amperia</h3>
+            <a href="#">Смотреть проект</a>
+        </div>
+        <p>Бренд красивых сувениров<br> и подарков для дома</p>
+    </div>
+</section>
+<!-- -->
+<section>
+    <div class="container">
+        <h3 class="title_2">Гайдлайны в подарок</h3>
+        <div class="d_flex_1">
+            <div>
+                <img src="images/Rectangle%2069.jpg" alt="Guideline">
+            </div>
+            <div class="about_guideline">
+                <div>
+                    <h3>Что такое гайдлайн и зачем он нужен?</h3>
+                    <p>А теперь об обещанном бонусе: заказывая фирменный стиль в нашем агентстве вы получаете минимальный гайдлайн в подарок, это позволит вам уже быть на шаг впереди ваших конкурентов!</p>
+                </div>
+                <p class="color">Гайдлайн – это свод правил по воспроизведению фирменного стиля на носителях. Если коротко, то в гайдлайне описано, как должен выглядеть каждый элемент корпоративного стиля<br> и какие правила его использования. Гайдлайн помогает вашему бизнесу экономить время и деньги, помогать масштабироваться, а также тиражировать ваш бизнес посредством франшизы.</p>
+            </div>
+        </div>
+        <div class="form">
+            <h3>Оставьте заявку на разработку вашего продукта</h3>
+            <p>Наши эксперты свяжутся с вами в ближайшее время</p>
+            <form action="#" method="post">
+                <div class="d_flex_1">
+                    <div>
+                        <label for="first_name"></label>
+                        <input class="first_name_phone" id="first_name" type="text" name="first_name" placeholder="Ваше Имя">
+                    </div>
+                    <div>
+                        <label for="phone"></label>
+                        <input class="first_name_phone" id="phone" type="tel" name="phone" placeholder="+7 (999) 999-99-99">
+                    </div>
+                    <div>
+                        <a class="application" href="#">Оставить заявку</a>
+                    </div>
+                </div>
+                <div>
+                    <label for="i_agree">
+                        <input type="checkbox" id="i_agree" name="i_agree"><span class="checkbox"></span>Я принимаю <a class="agree" href="#"> условия передачи персональных данных</a>
+                    </label>
+                </div>
+            </form>
         </div>
     </div>
 </section>
