add three sections and font-style

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </section>
 <!-- -->
 <section>
-    <div class="container project_1">
+    <div class="container project margin">
         <div>
             <img class="img" src="images/project_1.jpg" alt="project_amperia">
         </div>
@@ -119,6 +119,45 @@
             <a href="#">Смотреть проект</a>
         </div>
         <p>Бренд красивых сувениров<br> и подарков для дома</p>
+    </div>
+</section>
+<!-- -->
+<section>
+    <div class="container project">
+        <div>
+            <img class="img" src="images/project_2.jpg" alt="project_AQLifecare">
+        </div>
+        <div class="d_flex_1">
+            <h3>AQ.Lifecare</h3>
+            <a href="#">Смотреть проект</a>
+        </div>
+        <p>Инновационная клиника<br> внутривенной медицины</p>
+    </div>
+</section>
+<!-- -->
+<section>
+    <div class="container project">
+        <div>
+            <img class="img" src="images/project_3.jpg" alt="project_Vilata">
+        </div>
+        <div class="d_flex_1">
+            <h3>Vilata</h3>
+            <a href="#">Смотреть проект</a>
+        </div>
+        <p>Бренд натуральных и<br> вкусных соусов</p>
+    </div>
+</section>
+<!-- -->
+<section>
+    <div class="container project">
+        <div>
+            <img class="img" src="images/project_4.jpg" alt="project_Coral_Black">
+        </div>
+        <div class="d_flex_1">
+            <h3>Coral Black</h3>
+            <a href="#">Смотреть проект</a>
+        </div>
+        <p>Черная икра в современной<br> инторпритации</p>
     </div>
 </section>
 <!-- -->
