add script, icons

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     <div class="container">
         <h1>Вам нужен фирменный <br> стиль или ребрендинг?</h1>
         <p>Разработаем в срок от 10-ти дней</p>
-        <a href="#" class="btn">Портфолио</a>
-        <a href="#" class="btn">Оставить заявку</a>
+        <a href="#" class="btn">Портфолио <i class="fas fa-suitcase"></i>
+        </a>
+        <a href="#" class="btn">Оставить заявку <i class="fas fa-file-alt"></i>
+        </a>
     </div>
 </section>
 <!-- -->
@@ -202,5 +204,9 @@
         </div>
     </div>
 </section>
+
+
+
+<script src="https://kit.fontawesome.com/5c6559e651.js" crossorigin="anonymous"></script>
 </body>
 </html>
