--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div>
                 <h3 class="title_2">Сколько стоит фирменный стиль?</h3>
                 <div>
-                    <img class="img" src="images/Rectangle%2020.jpg" alt="price">
+                    <img class="project_banner" src="images/Rectangle%2020.jpg" alt="price">
                 </div>
             </div>
         </div>
@@ -112,9 +112,9 @@
 </section>
 <!-- -->
 <section>
-    <div class="container project margin">
+    <div class="container project project_amp">
         <div>
-            <img class="img" src="images/project_1.jpg" alt="project_amperia">
+            <img class="project_banner" src="images/project_1.jpg" alt="project_amperia">
         </div>
         <div class="d_flex_1">
             <h3>Amperia</h3>
@@ -127,7 +127,7 @@
 <section>
     <div class="container project">
         <div>
-            <img class="img" src="images/project_2.jpg" alt="project_AQLifecare">
+            <img class="project_banner" src="images/project_2.jpg" alt="project_AQLifecare">
         </div>
         <div class="d_flex_1">
             <h3>AQ.Lifecare</h3>
@@ -140,7 +140,7 @@
 <section>
     <div class="container project">
         <div>
-            <img class="img" src="images/project_3.jpg" alt="project_Vilata">
+            <img class="project_banner" src="images/project_3.jpg" alt="project_Vilata">
         </div>
         <div class="d_flex_1">
             <h3>Vilata</h3>
@@ -153,7 +153,7 @@
 <section>
     <div class="container project">
         <div>
-            <img class="img" src="images/project_4.jpg" alt="project_Coral_Black">
+            <img class="project_banner" src="images/project_4.jpg" alt="project_Coral_Black">
         </div>
         <div class="d_flex_1">
             <h3>Coral Black</h3>
@@ -175,10 +175,10 @@
                     <h3>Что такое гайдлайн и зачем он нужен?</h3>
                     <p>А теперь об обещанном бонусе: заказывая фирменный стиль в нашем агентстве вы получаете минимальный гайдлайн в подарок, это позволит вам уже быть на шаг впереди ваших конкурентов!</p>
                 </div>
-                <p class="color">Гайдлайн – это свод правил по воспроизведению фирменного стиля на носителях. Если коротко, то в гайдлайне описано, как должен выглядеть каждый элемент корпоративного стиля<br> и какие правила его использования. Гайдлайн помогает вашему бизнесу экономить время и деньги, помогать масштабироваться, а также тиражировать ваш бизнес посредством франшизы.</p>
+                <p class="guideline">Гайдлайн – это свод правил по воспроизведению фирменного стиля на носителях. Если коротко, то в гайдлайне описано, как должен выглядеть каждый элемент корпоративного стиля<br> и какие правила его использования. Гайдлайн помогает вашему бизнесу экономить время и деньги, помогать масштабироваться, а также тиражировать ваш бизнес посредством франшизы.</p>
             </div>
         </div>
-        <div class="form">
+        <div class="submit_application">
             <h3>Оставьте заявку на разработку вашего продукта</h3>
             <p>Наши эксперты свяжутся с вами в ближайшее время</p>
             <form action="#" method="post">
@@ -192,12 +192,12 @@
                         <input class="first_name_phone" id="phone" type="tel" name="phone" placeholder="+7 (999) 999-99-99">
                     </div>
                     <div>
-                        <a class="application" href="#">Оставить заявку</a>
+                        <button type="submit" class="btn_application">Оставить заявку</button>
                     </div>
                 </div>
                 <div>
                     <label for="i_agree">
-                        <input type="checkbox" id="i_agree" name="i_agree"><span class="checkbox"></span>Я принимаю <a class="agree" href="#"> условия передачи персональных данных</a>
+                        <input type="checkbox" id="i_agree" name="i_agree"><span class="checkbox"></span>Я принимаю <a class="checkbox_link" href="#"> условия передачи персональных данных</a>
                     </label>
                 </div>
             </form>
