add sections, scripts, style css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
+
 </head>
 <body>
 <header>
@@ -36,6 +40,15 @@
         </div>
     </div>
 </header>
+<div class="owl-carousel">
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+</div>
 <section class="main_banner">
     <div class="container">
         <h1>Вам нужен фирменный <br> стиль или ребрендинг?</h1>
@@ -196,7 +209,7 @@
                     </div>
                 </div>
                 <div>
-                    <label for="i_agree">
+                    <label class="checkbox_label" for="i_agree">
                         <input type="checkbox" id="i_agree" name="i_agree"><span class="checkbox"></span>Я принимаю <a class="checkbox_link" href="#"> условия передачи персональных данных</a>
                     </label>
                 </div>
@@ -204,9 +217,99 @@
         </div>
     </div>
 </section>
+<!-- -->
+<section class="minor_banner">
+    <div class="container">
+        <h2 class="subtitle_2">Гарантия качества: 5 фундаментальных преимуществ работать с нами</h2>
+        <ul class="d_flex list list_2">
+            <li>
+                <span>1</span>
+                <p>Разработкой вашего фирменного стиля займется команда профессионалов с высшим профильным образованием.</p>
+            </li>
+            <li>
+                <span>2</span>
+                <p>Все права на результат работ переходят от Исполнителя к Заказчику и это закреплено юридически в нашем с вами Договоре.</p>
+            </li>
+            <li>
+                <span>3</span>
+                <p>Все сотрудники компании строго соблюдают правила коммерческой тайны по вашему проекту, мы никогда не разглашаем стоимость разработки вашего проекта и любые детали, связанные с проектом.</p>
+            </li>
+            <li>
+                <span>4</span>
+                <p>Мы гарантируем, что любая разработка проходит проверку на оригинальность, вы получайте действительно уникальный продукт</p>
+            </li>
+            <li>
+                <span>5</span>
+                <p>Мы имеем опыт работы с малым, средним и крупным бизнесом, а также с международными корпорациями Наша репутация - это 9-ть<br> лет успешной работы.<br> 8-мь из 10-ти<br> клиентов после совместной разработки фирменного стиля обращаются к нам повторно: за<br> созданием сайта, контента для социальных сетей или по любой другой<br> задаче.</p>
+            </li>
+        </ul>
+    </div>
+</section>
+<!-- -->
+<footer>
+    <div class="container">
+        <div class="d_flex_1">
+            <div>
+                <h3 class="headline">Связаться с нами</h3>
+                <form action="#" method="post">
+                    <div>
+                        <label for="first_name_1"></label>
+                        <input class="first_name_phone_2" id="first_name_1" type="text" name="first_name" placeholder="Ваше Имя">
+                    </div>
+                    <div>
+                    <label for="phone_1"></label>
+                    <input class="first_name_phone_2" id="phone_1" type="tel" name="phone" placeholder="+7 (999) 999-99-99">
+                </div>
+                <div>
+                    <label class="checkbox_label" for="i_agree_1">
+                        <input type="checkbox" id="i_agree_1" name="i_agree"><span class="checkbox"></span>Я принимаю <a  class="checkbox_link" href="#"> условия передачи персональных данных</a>
+                    </label>
+                </div>
+                <div>
+                    <button class="btn_application" type="submit">Оставить заявку</button>
+                </div>
+                </form>
+            </div>
+            <div class="contact">
+                <h3 class="headline">Контакты</h3>
+                <p>8 (495) 156-39-11</p>
+                <p>brand@free-creative.com</p>
+                <p>Москва, Садовническая улица 69</p>
+            </div>
+        </div>
+        <div>
+            <h3 class="headline_2">Мы в СМИ</h3>
+            <div class="d_flex_1 media">
+                <div>
+                    <p>История агентства FREE.creative</p>
+                    <a href="#" target="_blank">vc.ru</a>
+                </div>
+                <div>
+                    <p>Традиции и современность: брендинг ресторана-пекарни «Ешь Хлеб»</p>
+                    <a href="#" target="_blank">vc.ru</a>
+                </div>
+                <div>
+                    <p>Четыре боли крупных клиентов и целительная сила аккаунтинга</p>
+                    <a href="#" target="_blank">vc.ru</a>
+                </div>
+                <div>
+                    <p>Как выводить на рынок бренды будущего: кейс инновационной клиники витаминных коктейлей</p>
+                    <a href="#" target="_blank">sostav .ru</a>
+                </div>
+            </div>
+        </div>
+        <p>@ FREE.creative 2008—2020</p>
+    </div>
+</footer>
 
 
 
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
+<script src="js/owl.carousel.js"></script>
 <script src="https://kit.fontawesome.com/5c6559e651.js" crossorigin="anonymous"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
