add section "stages"

--- a/index.html
+++ b/index.html
@@ -210,11 +210,76 @@
                 </div>
                 <div>
                     <label class="checkbox_label" for="i_agree">
-                        <input type="checkbox" id="i_agree" name="i_agree"><span class="checkbox"></span>Я принимаю <a class="checkbox_link" href="#"> условия передачи персональных данных</a>
+                        <input type="checkbox" id="i_agree" name="i_agree"><span class="checkbox"></span>Я принимаю <a class="checkbox_link" href="#">условия передачи персональных данных</a>
                     </label>
                 </div>
             </form>
         </div>
+    </div>
+</section>
+<!-- -->
+<section>
+    <div class="container">
+        <h2 class="stages">Этапы создания<br> фирменного стиля<br> и гайдлайна</h2>
+        <div class="flex_container">
+            <div class="item_1">
+                <img src="images/Group%2064.svg" alt="creative_search">
+                <h4>Погружение<br> в креативный поиск</h4>
+            </div>
+            <div class="item_2">
+                <h5>Иследование<br> среды</h5>
+                <p>Изучаем нишу и конкурентное поле, находим подходящую идею будущей коммуникации</p>
+            </div>
+            <div class="item_3">
+                <h5>Поиск<br> тональности</h5>
+                <p>Решаем, какая тональность подходит именно вашему бренду. Дерзкий характер или спокойный, строгий или ультрамодный</p>
+            </div>
+            <div class="item_4">
+                <h5>Формирование мудбордов</h5>
+                <p>Составляем подборку креативных проектов, которые соответствуют поставленной тональности стиля</p>
+            </div>
+        </div>
+        <div class="flex_container">
+            <div class="item_1">
+                <img src="images/Vector2.svg" alt="design">
+                <h4>Разработка визуальной<br> и вербальной айдентики</h4>
+            </div>
+            <div class="item_2">
+                <h5>Название и слоганы</h5>
+                <p>Придумываем название для вашего бренда и запоминающиеся слоганы</p>
+            </div>
+            <div class="item_3">
+                <h5>Разработка логотипа, цвет</h5>
+                <p>Создаем логотип – основной графический символ, важнейший элемент коммуникации, подбираем цветовую палитру для всей коммуникации</p>
+            </div>
+            <div class="item_4">
+                <h5>Основные носители фирменного стиля</h5>
+                <p>Создаем дополнительные элементы дизайна: иллюстрации, фото, типографика. Прорабатываем дизайн на всех носителях.</p>
+            </div>
+        </div>
+        <div class="flex_container">
+            <div class="item_1">
+                <img src="images/Group%2066.svg" alt="guideline">
+                <h4>Создание гайдлайна</h4>
+            </div>
+            <div class="item_2">
+                <h5>Основные принципы стиля</h5>
+                <p>Выявляем основные принципы, на которых построен фирменный стиль</p>
+            </div>
+            <div class="item_3">
+                <h5>Составление гайдлайна</h5>
+                <p>Наглядно показываем все правила использования фирменного стиля, закрепляем результат в виде презентации</p>
+            </div>
+            <div class="item_4">
+                <h5>Вы получаете готовый бренд с набором всех необходимых инструментов</h5>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- -->
+<section>
+    <div class="container">
+
     </div>
 </section>
 <!-- -->
@@ -279,7 +344,7 @@
         </div>
         <div>
             <h3 class="headline_2">Мы в СМИ</h3>
-            <div class="d_flex_1 media">
+            <div class="media">
                 <div>
                     <p>История агентства FREE.creative</p>
                     <a href="#" target="_blank">vc.ru</a>
@@ -294,11 +359,11 @@
                 </div>
                 <div>
                     <p>Как выводить на рынок бренды будущего: кейс инновационной клиники витаминных коктейлей</p>
-                    <a href="#" target="_blank">sostav .ru</a>
+                    <a href="#" target="_blank">sostav.ru</a>
                 </div>
             </div>
         </div>
-        <p>@ FREE.creative 2008—2020</p>
+        <p class="free">@ FREE.creative 2008—2020</p>
     </div>
 </footer>
 
