add section "stages_2"

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <section>
     <div class="container">
         <h3 class="title">Что такое фирменный стиль</h3>
-        <div class="d_flex_1">
+        <div class="brand_identity">
             <div>
             <img src="images/Rectangle%207.jpg" alt="brand_identity">
             </div>
@@ -78,7 +78,7 @@
 <section>
     <div class="container_2">
         <h2 class="subtitle">Название и логотип – важные составляющие фирменного стиля, но на этом всё только начинается. Ниже основные элементы:</h2>
-            <ul class="d_flex list">
+            <ul class="list">
                <li>
                    <span>1</span>
                    <p>Название<br> компании</p>
@@ -232,7 +232,7 @@
             </div>
             <div class="item_3">
                 <h5>Поиск<br> тональности</h5>
-                <p>Решаем, какая тональность подходит именно вашему бренду. Дерзкий характер или спокойный, строгий или ультрамодный</p>
+                <p>Решаем, какая тональность подходит именно вашему бренду. Дерзкий характер или спокойный, строгий<br> или ультрамодный</p>
             </div>
             <div class="item_4">
                 <h5>Формирование мудбордов</h5>
@@ -277,8 +277,45 @@
     </div>
 </section>
 <!-- -->
-<section>
+<section class="stages_2">
     <div class="container">
+        <div class="flex_block">
+            <div class="block_1"></div>
+            <div class="block_2 caption">Фрилансер</div>
+            <div class="block_3 caption_2">Free.creative</div>
+            <div class="block_4 caption">Большое агентство с именем</div>
+        </div>
+        <div class="flex_block border">
+            <div class="block_1">Философия</div>
+            <div class="block_2 content border_2">Часто замотивирован как можно быстрее сделать и получить деньги.</div>
+            <div class="block_3 content border_2">Опытная команда профессионалов, нацеленная на результат. К каждому проекту относимся как к родному, работаем на качество, а не на количество.</div>
+            <div class="block_4 content border_2">Огромная сверхопытная команда экстра профессионалов, выдающая проект строго исходя из подписанной сметы и часов человека. Замотивированы делать “большие” и дорогие проекты.</div>
+        </div>
+        <div class="flex_block border">
+            <div class="block_1">Уровень дизайна</div>
+            <div class="block_2 content">Как получится....</div>
+            <div class="block_3 content">Высокий. За нас говорит наше портфолио и клиенты.</div>
+            <div class="block_4 content">Высокий. За нколлег говорит их, портфолио и уровень клиентов.</div>
+        </div>
+        <div class="flex_block border">
+            <div class="block_1">Стоимость</div>
+            <div class="block_2 content">В 90% случаев дешевле агентства.</div>
+            <div class="block_3 content">Адекватная рынку и вашей задаче. Каждый кейс для нас – уникальный вызов, мы погружаемся в бриф и выходим с ценовым предложением.</div>
+            <div class="block_4 content">Высокая, иногда откровенно завышенная, малобюджетные клиенты неинтересны.</div>
+        </div>
+        <div class="flex_block border">
+            <div class="block_1">Отношение к клиенту</div>
+            <div class="block_2 content">Как получится...</div>
+            <div class="block_3 content">Нас можно назвать настоящими друзьями. Не бросаем в беде и сделаем всё, чтобы решить проблему. На связи 24/7, поддерживаем и консультируем онлайн и офлайн на каждом этапе сотрудничества.</div>
+            <div class="block_4 content">Коммуникация ведется в рамках выделенных часов и сметы, вам уделяют столько времени, сколько агентство считает нужным. Иногда можно ждать ответ на свой имейл больше дня – это норма.</div>
+        </div>
+        <div class="flex_block border">
+            <div class="block_1">Сроки</div>
+            <div class="block_2 content">Иногда исполнитель вообще пропадает без связи</div>
+            <div class="block_3 content">Мы адекватно подходим к срокам в нашем агентстве, не обещаем того, чего не можем выполнить. Чётко менеджерим своё время, чтобы клиент получил всё в срок.</div>
+            <div class="block_4 content">Долго, несколько уровней менеджмента, бюррократия, очередь из больших клиентов.</div>
+        </div>
+
 
     </div>
 </section>
